✨ feat(jfi): Add Insolator, Pulverizer, Charger, Crucible, Furnace recipes to JFMUY. Also refactor TE categories and wrappers.