@@ -1,4 +1,4 @@
-package ruiseki.jfi.jfmuy.thermalexpansion.sawmill;
+package ruiseki.jfi.jfmuy.thermalexpansion.machine.furnace;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -10,14 +10,14 @@ import net.minecraft.item.ItemStack;
 
 import org.apache.logging.log4j.Level;
 
+import cofh.lib.util.helpers.StringHelper;
 import cofh.thermalexpansion.block.machine.BlockMachine;
-import cofh.thermalexpansion.gui.client.machine.GuiSawmill;
-import cofh.thermalexpansion.util.crafting.SawmillManager;
-import cofh.thermalexpansion.util.crafting.SawmillManager.RecipeSawmill;
+import cofh.thermalexpansion.gui.client.machine.GuiFurnace;
+import cofh.thermalexpansion.util.crafting.FurnaceManager;
 import ruiseki.jfi.JFI;
-import ruiseki.jfi.jfmuy.thermalexpansion.BaseRecipeCategory;
 import ruiseki.jfi.jfmuy.thermalexpansion.Drawables;
 import ruiseki.jfi.jfmuy.thermalexpansion.RecipeUidsTE;
+import ruiseki.jfi.jfmuy.thermalexpansion.machine.BaseRecipeCategory;
 import ruiseki.jfmuy.api.IGuiHelper;
 import ruiseki.jfmuy.api.IJFMUYHelpers;
 import ruiseki.jfmuy.api.IModRegistry;
@@ -27,15 +27,15 @@ import ruiseki.jfmuy.api.gui.IRecipeLayout;
 import ruiseki.jfmuy.api.ingredients.IIngredients;
 import ruiseki.jfmuy.api.ingredients.VanillaTypes;
 import ruiseki.jfmuy.api.recipe.IRecipeCategoryRegistration;
-import ruiseki.okcore.helper.LangHelpers;
 
-public class SawmillRecipeCategory extends BaseRecipeCategory<SawmillRecipeWrapper> {
+public class FurnaceRecipeCategory extends BaseRecipeCategory<FurnaceRecipeWrapper> {
 
     public static void register(IRecipeCategoryRegistration registry) {
         IJFMUYHelpers jeiHelpers = registry.getJFMUYHelpers();
         IGuiHelper guiHelper = jeiHelpers.getGuiHelper();
 
-        registry.addRecipeCategories(new SawmillRecipeCategory(guiHelper));
+        registry.addRecipeCategories(new FurnaceRecipeCategory(guiHelper));
+        registry.addRecipeCategories(new FurnaceRecipeCategoryFood(guiHelper));
     }
 
     public static void initialize(IModRegistry registry) {
@@ -43,20 +43,23 @@ public class SawmillRecipeCategory extends BaseRecipeCategory<SawmillRecipeWrapp
             IJFMUYHelpers jeiHelpers = registry.getJFMUYHelpers();
             IGuiHelper guiHelper = jeiHelpers.getGuiHelper();
 
-            registry.addRecipes(getRecipes(guiHelper), RecipeUidsTE.SAWMILL);
-            registry.addRecipeClickArea(GuiSawmill.class, 79, 34, 24, 16, RecipeUidsTE.SAWMILL);
-            registry.addRecipeCatalyst(BlockMachine.sawmill, RecipeUidsTE.SAWMILL);
+            registry.addRecipes(getRecipes(guiHelper), RecipeUidsTE.FURNACE);
+            registry
+                .addRecipeClickArea(GuiFurnace.class, 79, 34, 24, 16, RecipeUidsTE.FURNACE, RecipeUidsTE.FURNACE_FOOD);
+            registry.addRecipeCatalyst(BlockMachine.furnace, RecipeUidsTE.FURNACE);
+
+            FurnaceRecipeCategoryFood.initialize(registry);
         } catch (Throwable t) {
             JFI.okLog(Level.ERROR, "Bad/null recipe!", t);
         }
     }
 
-    public static List<SawmillRecipeWrapper> getRecipes(IGuiHelper guiHelper) {
+    public static List<FurnaceRecipeWrapper> getRecipes(IGuiHelper guiHelper) {
 
-        List<SawmillRecipeWrapper> recipes = new ArrayList<>();
+        List<FurnaceRecipeWrapper> recipes = new ArrayList<>();
 
-        for (RecipeSawmill recipe : SawmillManager.getRecipeList()) {
-            recipes.add(new SawmillRecipeWrapper(guiHelper, recipe));
+        for (FurnaceManager.RecipeFurnace recipe : FurnaceManager.getRecipeList()) {
+            recipes.add(new FurnaceRecipeWrapper(guiHelper, recipe));
         }
         return recipes;
     }
@@ -64,26 +67,26 @@ public class SawmillRecipeCategory extends BaseRecipeCategory<SawmillRecipeWrapp
     protected IDrawableStatic progress;
     protected IDrawableStatic speed;
 
-    public SawmillRecipeCategory(IGuiHelper guiHelper) {
+    public FurnaceRecipeCategory(IGuiHelper guiHelper) {
 
-        background = guiHelper.drawableBuilder(GuiSawmill.TEXTURE, 26, 11, 132, 62)
+        background = guiHelper.drawableBuilder(GuiFurnace.TEXTURE, 26, 11, 124, 62)
             .addPadding(0, 0, 16, 0)
             .build();
         energyMeter = Drawables.getDrawables(guiHelper)
             .getEnergyEmpty();
-        localizedName = LangHelpers.localize("tile.thermalexpansion.machine.sawmill.name");
+        localizedName = StringHelper.localize("tile.thermalexpansion.machine.furnace.name");
 
         progress = Drawables.getDrawables(guiHelper)
             .getProgress(Drawables.PROGRESS_ARROW);
         speed = Drawables.getDrawables(guiHelper)
-            .getScale(Drawables.SCALE_SAW);
+            .getScale(Drawables.SCALE_FLAME);
     }
 
     @Nonnull
     @Override
     public String getUid() {
 
-        return RecipeUidsTE.SAWMILL;
+        return RecipeUidsTE.FURNACE;
     }
 
     @Override
@@ -95,7 +98,7 @@ public class SawmillRecipeCategory extends BaseRecipeCategory<SawmillRecipeWrapp
     }
 
     @Override
-    public void setRecipe(IRecipeLayout recipeLayout, SawmillRecipeWrapper recipeWrapper, IIngredients ingredients) {
+    public void setRecipe(IRecipeLayout recipeLayout, FurnaceRecipeWrapper recipeWrapper, IIngredients ingredients) {
 
         List<List<ItemStack>> inputs = ingredients.getInputs(VanillaTypes.ITEM);
         List<List<ItemStack>> outputs = ingredients.getOutputs(VanillaTypes.ITEM);
@@ -103,22 +106,10 @@ public class SawmillRecipeCategory extends BaseRecipeCategory<SawmillRecipeWrapp
         IGuiItemStackGroup guiItemStacks = recipeLayout.getItemStacks();
 
         guiItemStacks.init(0, true, 45, 14);
-        guiItemStacks.init(1, false, 105, 14);
+        guiItemStacks.init(1, false, 105, 23);
 
-        guiItemStacks.set(0, inputs.get(0));
-        guiItemStacks.set(1, outputs.get(0));
-
-        if (outputs.size() > 1) {
-            guiItemStacks.init(2, false, 105, 41);
-            guiItemStacks.set(2, outputs.get(1));
-
-            guiItemStacks.addTooltipCallback((slotIndex, input, ingredient, tooltip) -> {
-
-                if (slotIndex == 2) {
-                    tooltip.add(LangHelpers.localize("info.cofh.chance") + ": " + recipeWrapper.chance + "%");
-                }
-            });
-        }
+        guiItemStacks.set(0, inputs.getFirst());
+        guiItemStacks.set(1, outputs.getFirst());
     }
 
 }
